add some changes

--- a/Que_1/static/index.html
+++ b/Que_1/static/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h2>through AJAX call the gethello method</h2>
-  <button onclick="fetchdata()">Click to Say Hello</button>
+  <button onclick="fetchdata()">Click</button>
   <p id="responseText"></p>
 
   <script>
